--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "devDependencies": {
     "@types/mime-types": "^3.0.1",
-    "concurrently": "^8.0.1"
+    "concurrently": "^8.0.1",
+    "sass-embedded": "^1.90.0"
   },
   "dependencies": {
     "mime-types": "^3.0.1",
     "react-icons": "^5.5.0",
+    "scss": "^0.2.4",
     "tsc": "^2.0.4",
     "uuid": "^11.1.0"
   }
